working on making the navbar and header align correctly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -98,6 +98,8 @@ background: gray;
 
 
 #petsuccess {
+  font-family: 'Montserrat', sans-serif;
+  
   width: 100%;
   text-align: center;
   font-size: 50px;
